# pendulum_tracker

./: .gitignore  README.md  pyproject.toml  track_pendulum.py
data/: output-1-angles.csv  output-1-positions.csv  output-3-angles.csv  output-3-positions.csv
notebook/: AnalyseData.ipynb
utils/: misc_utils.py  rect_utils.py
